2005-11-09  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Use $PACKAGE_NAME.

2005-11-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Tiny output improvements.
		
2005-11-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* m4/gecko.m4:

	Add check for contract IDs which we need but are only provided
	by extensions which may or may not have been built into gecko.
	We cannot check for the headers here since they are always present.

2005-11-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/glade/epiphany.glade:

	Because the Dwnloads window is a GtkDiaog for technical reasons,
	we set the type hint to 'normal' so it still has close/minimise
	buttons.

2005-11-09  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	A m4/gecko.m4:

	Distill the gecko detection logic into a macro package.

2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-persist.c: (ephy_embed_persist_class_init):

	Use canonical name form.

2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* lib/egg/eggstatusicon.c: (egg_status_icon_class_init):
	* lib/egg/eggtrayicon.c: (egg_tray_icon_class_init):
	* lib/egg/eggtraymanager.c: (egg_tray_manager_class_init):

	Don't translate param spec strings.

2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-single.c: (ephy_embed_single_iface_init):
	* embed/mozilla/mozilla-embed-single.cpp:

	Make "network-status" property readwrite.

2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-single.c: (ephy_embed_single_iface_init):
	* lib/egg/eggstatusicon.c: (egg_status_icon_class_init):
	* lib/egg/eggtrayicon.c: (egg_tray_icon_class_init):
	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_class_init):
	* src/bookmarks/ephy-bookmark-action.c:
	(ephy_bookmark_action_class_init):
	* src/bookmarks/ephy-topic-action.c:
	(ephy_topic_action_class_init):
	* src/ephy-find-toolbar.c: (ephy_find_toolbar_class_init):