@@ -1,5 +1,14 @@
 2005-11-09  Christian Persch  <chpe@cvs.gnome.org>
 
+	* configure.ac:
+	* m4/gecko.m4:
+
+	Rewrite the contractid check. Now works with builds without
+	--with-default-mozilla-five-home.
+	Balance AC_LANG_POP/PUSH.
+			
+2005-11-09  Christian Persch  <chpe@cvs.gnome.org>
+
 	* m4/gecko.m4:
 
 	Use $PACKAGE_NAME.
